# SepiaStream

./: .clang-format  .gitignore  .travis.yml  CMakeLists.txt  FindFlatBuffers.cmake  LICENSE  README.md
daemons/: CMakeLists.txt  client.cpp  server.cpp
daemons/CommRouter/: CMakeLists.txt
daemons/CommRouter/defs/: messagelogger.h
daemons/CommRouter/src/: main.cpp  messagelogger.cpp
daemons/Proxy/: CMakeLists.txt
daemons/Proxy/defs/: msgsocket.h  proxyclient.h  proxyserver.h  session.h
daemons/Proxy/src/: main.cpp  msgsocket.cpp  proxyclient.cpp  proxyserver.cpp  session.cpp
daemons/Router/: CMakeLists.txt
daemons/Router/defs/: messagerouter.h  networksender.h  processmonitor.h
daemons/Router/src/: main.cpp  messagerouter.cpp  networksender.cpp  processmonitor.cpp
defs/: imagereader.h  imagestream.h  imagewriter.h
defs/sepia/: databuffer.h  reader.h  semaphore.h  semaphore_interface.h  sharedmemory.h  stream.h  writer.h
defs/sepia/comm/: dispatcher.h  globalreceiver.h  messageclient.h  messagehandler.h  messagesender.h  observer.h  observerbase.h  observerraw.h  scom.h
defs/sepia/comm2/: dispatcher.h  global.h  globalreceiver.h  internals.h  messagereceiver.h  messagesender.h  observer.h  observerall.h  observerbase.h  receiver.h  requestor.h  scopedmessagesender.h
defs/sepia/compression/: common.h  compress.h  decompress.h  enc3b11b.h
defs/sepia/network/: client.h  server.h  tcpsocket.h
defs/sepia/util/: helper.h  progargs.h  threadbarrier.h  threadobject.h
examples/: CMakeLists.txt  reader.cpp  writer.cpp
examples/comm2tester/: CMakeLists.txt  comm2tester_msgs.fbs  comm2tester_msgs.proto
examples/comm2tester/defs/: receivetester.hpp
examples/comm2tester/src/: commtester.cpp  receivetester.cpp
examples/commtester/: CMakeLists.txt  commtester_messages.proto
examples/commtester/defs/: receivetester.hpp
examples/commtester/src/: commtester.cpp  receivetester.cpp
src/: databuffer.cpp  imagereader.cpp  imagestream.cpp  imagewriter.cpp  reader.cpp  semaphore.cpp  semaphore_interface.cpp  sharedmemory.cpp  stream.cpp  writer.cpp
src/comm/: globalreceiver.cpp  header.proto  internal.proto  messagehandler.cpp  messagesender.cpp  observer.cpp
src/comm2/: global.cpp  globalreceiver.cpp  internals.cpp  messagereceiver.cpp  messagesender.cpp  observerbase.cpp  receiver.cpp
src/compression/: common.cpp  compress.cpp  decompress.cpp  enc3b11b.cpp
src/network/: client.cpp  server.cpp  tcpsocket.cpp
src/util/: helper.cpp  progargs.cpp  threadobject.cpp
