if(BUILD_DAEMONS)
    project( daemons )
    add_subdirectory( Router )
    add_subdirectory( CommRouter )
    add_subdirectory( Proxy )
    add_executable( client client.cpp )
    add_dependencies( client SepiaStream )
    target_link_libraries( client -lSepiaStream )
    add_executable( server server.cpp )
    add_dependencies( server SepiaStream )
    target_link_libraries( server -lSepiaStream )
endif(BUILD_DAEMONS)
