if(BUILD_DAEMONS)
    project( daemons )
    add_subdirectory( Router )
    add_subdirectory( CommRouter )
    add_subdirectory( Proxy )
    add_executable( client client.cpp )
    add_dependencies( client SepiaStream )
    target_link_libraries( client SepiaStream )
    add_executable( server server.cpp )
    add_dependencies( server SepiaStream )
    target_link_libraries( server SepiaStream )
endif(BUILD_DAEMONS)
